syntax = "proto3";

package hyperlane.announce.v1;

// MsgAnnouncement Announces a validator signature storage location
message MsgAnnouncement {

  string sender = 1;

  // The validator (in eth address format) that is announcing its storage
  // location
  bytes validator = 2;

  // location where signatures will be stored
  string storage_location = 3;

  // signed validator announcement
  bytes signature = 4;
}

// MsgAnnouncementResponse defines the MsgAnnouncementResponse response type.
message MsgAnnouncementResponse {}